# Bragi

./: .gitignore  README.md  docker-compose.yml  package-lock.json
api/: pyproject.toml
api/bragi_api/: __main__.py  file.py  server.py  users.py
api/experiments/faster-whisper/: test.py
api/experiments/whisper/: print.py  sound2text.py
api/experiments/whisper/text_result_whisper/: fasit.txt  test_large-v3.txt  test_small_timestamps.json
backend/: Dockerfile.backend  setup.cfg
backend/api/: app.py  requirements.txt
backend/api/experiments/: compareText.py  splitmp3.py
backend/api/experiments/whisper/result/: result.txt
backend/api/experiments/whisper/text_result_whisper/: compiled_transcriptions.txt  test_large-v2.txt  test_large.txt  test_tiny.txt
backend/api/utils/: compareText.py  sound2text.py
backend/api/utils/result/: result.txt
backend/api/utils/text/: test_base.txt  test_large.txt  test_medium.txt  test_small.txt  test_tiny.txt
bragi-chrome/: package-lock.json  package.json
bragi-chrome/src/: app.html
bragi-chrome/src/routes/: +page.svelte
bragi-chrome/static/: background.js  captionScript.js  manifest.json
frontend/: Dockerfile.frontend  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  app.html  utils.ts
frontend/src/components/: AppHeader.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/newcaption/: +page.svelte
frontend/src/routes/newcaption/[id]/: +page.svelte
frontend/src/routes/youtubetranscribe/: +page.svelte
(+1 files in other folders)
